--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".addBookmark"></activity>
+        <activity android:name=".addBookmark"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
     </application>
 
 </manifest>
